objects/Curriculum__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Curriculum_Name__c</fullName>
        <defaultValue>&quot;Do The Math&quot;</defaultValue>
        <label>Curriculum Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do The Math</fullName>
                </value>
                <value>
                    <fullName>Do the Math Now!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Module__c</fullName>
        <label>Date of Assignment</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module_Assignments__c</fullName>
        <label>Module Assignments</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Module_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginning of Module Assessment</fullName>
                </value>
                <value>
                    <fullName>SWYK: Lesson 5</fullName>
                </value>
                <value>
                    <fullName>SWYK: Lesson 10</fullName>
                </value>
                <value>
                    <fullName>SWYK: Lesson 15</fullName>
                </value>
                <value>
                    <fullName>SWYK: Lesson 20</fullName>
                </value>
                <value>
                    <fullName>SWYK: Lesson 25</fullName>
                </value>
                <value>
                    <fullName>SWYK: Lesson 30</fullName>
                </value>
                <value>
                    <fullName>End of Module Assessment</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                    <isActive>false</isActive>
                    <label>End</label>
                </value>
                <value>
                    <fullName>LLI Assignment 1</fullName>
                    <isActive>false</isActive>
                    <label>LLI Assignment 1</label>
                </value>
                <value>
                    <fullName>LLI Assignment 2</fullName>
                    <isActive>false</isActive>
                    <label>LLI Assignment 2</label>
                </value>
                <value>
                    <fullName>LLI Assignment 3</fullName>
                    <isActive>false</isActive>
                    <label>LLI Assignment 3</label>
                </value>
                <value>
                    <fullName>SWYK 1</fullName>
                    <isActive>false</isActive>
                    <label>SWYK 1</label>
                </value>
                <value>
                    <fullName>SWYK 2</fullName>
                    <isActive>false</isActive>
                    <label>SWYK 2</label>
                </value>
                <value>
                    <fullName>SWYK 3</fullName>
                    <isActive>false</isActive>
                    <label>SWYK 3</label>
                </value>
                <value>
                    <fullName>SWYK 4</fullName>
                    <isActive>false</isActive>
                    <label>SWYK 4</label>
                </value>
                <value>
                    <fullName>SWYK 5</fullName>
                    <isActive>false</isActive>
                    <label>SWYK 5</label>
                </value>
                <value>
                    <fullName>SWYK 6</fullName>
                    <isActive>false</isActive>
                    <label>SWYK 6</label>
                </value>
                <value>
                    <fullName>Start</fullName>
                    <isActive>false</isActive>
                    <label>Start</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <label>Module Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Curriculum_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addition &amp; Subtraction: Number Core</fullName>
                </value>
                <value>
                    <fullName>Addition &amp; Subtraction: Module A</fullName>
                </value>
                <value>
                    <fullName>Addition &amp; Subtraction: Module B</fullName>
                </value>
                <value>
                    <fullName>Addition &amp; Subtraction: Module C</fullName>
                </value>
                <value>
                    <fullName>Multiplication: Module A</fullName>
                </value>
                <value>
                    <fullName>Multiplication: Module B</fullName>
                </value>
                <value>
                    <fullName>Multiplication: Module C</fullName>
                </value>
                <value>
                    <fullName>Division: Module A</fullName>
                </value>
                <value>
                    <fullName>Division: Module B</fullName>
                </value>
                <value>
                    <fullName>Division: Module C</fullName>
                </value>
                <value>
                    <fullName>Fractions: Module A</fullName>
                </value>
                <value>
                    <fullName>Fractions: Module B</fullName>
                </value>
                <value>
                    <fullName>Fractions: Module C</fullName>
                </value>
                <value>
                    <fullName>Unit 1: Build a Foundation for Multiplication</fullName>
                </value>
                <value>
                    <fullName>Unit 2: Develop Multiplication Number Sense</fullName>
                </value>
                <value>
                    <fullName>Unit 3: Use Place-Value Strategies to Multiply</fullName>
                </value>
                <value>
                    <fullName>Unit 4: Connect Multiplication and Division</fullName>
                </value>
                <value>
                    <fullName>Unit 5: Use Place Value Strategies to Divide</fullName>
                </value>
                <value>
                    <fullName>Unit 6: Develop Understanding of Fractions</fullName>
                </value>
                <value>
                    <fullName>Unit 7: Reason with Fractions</fullName>
                </value>
                <value>
                    <fullName>Unit 8: Extend Fraction Concepts and Comparing Strategies</fullName>
                </value>
                <value>
                    <fullName>Unit 9: Build on Equivalence to Estimate, Compare, Add, and Subtract</fullName>
                </value>
                <value>
                    <fullName>Unit 10: Develop Fraction Number Sense</fullName>
                </value>
                <value>
                    <fullName>LLI 1</fullName>
                    <isActive>false</isActive>
                    <label>LLI 1</label>
                </value>
                <value>
                    <fullName>LLI 2</fullName>
                    <isActive>false</isActive>
                    <label>LLI 2</label>
                </value>
                <value>
                    <fullName>LLI 3</fullName>
                    <isActive>false</isActive>
                    <label>LLI 3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module_Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Curricula</relationshipLabel>
        <relationshipName>Curriculums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_CY_ID__c</fullName>
        <formula>Student__r.Student_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student CY ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_CY_ID_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student CY-ID</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Student__c.Student_ID_Auto_Number__c</field>
                <operation>equals</operation>
                <valueField>Student__c.Student_ID_Auto_Number__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Curricula (Student CY-ID)</relationshipLabel>
        <relationshipName>Curriculums1_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <formula>Student__r.Student_ID_Auto_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Local_ID__c</fullName>
        <formula>Student__r.Local_Student_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Local ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student/Section</label>
        <referenceTo>Student_Section__c</referenceTo>
        <relationshipLabel>Curricula</relationshipLabel>
        <relationshipName>Curriculums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student Name</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Curricula</relationshipLabel>
        <relationshipName>Curriculums</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Curriculum</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Student_CY_ID__c</columns>
        <columns>Student__c</columns>
        <columns>Curriculum_Name__c</columns>
        <columns>Module_Assignments__c</columns>
        <columns>Module_Name__c</columns>
        <columns>Date_of_Module__c</columns>
        <columns>Module_Score__c</columns>
        <columns>Comments__c</columns>
        <columns>Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Curriculum ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Curricula</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>