objects/Curriculum__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student_CY_ID__c</columns>
    <columns>Student__c</columns>
    <columns>Curriculum_Name__c</columns>
    <columns>Module_Assignments__c</columns>
    <columns>Module_Name__c</columns>
    <columns>Date_of_Module__c</columns>
    <columns>Module_Score__c</columns>
    <columns>Comments__c</columns>
    <columns>Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>